# controllers/vods.go
@@ -18,33 +18,33 @@ import (
 // @Failure 404 {string} string
 // @Router /vods/ [get]
 func GetVods(c *fiber.Ctx) error {
+	var vod models.Vod
 	var vods []models.Vod
 
-	result := database.DB.Model((&vods)).Where("publish = ?", true).Find(&vods)
+	database.DB.Model((&vod)).Where("publish = ?", true).Preload("Clips").Find(&vods)
 
-	if result.RowsAffected < 1 {
+	if len(vods) < 1 {
 		return c.Status(http.StatusNotFound).JSON(fiber.Map{"message": "No vods found"})
 	}
 
 	return c.Status(http.StatusOK).JSON(vods)
 }
 
-// GetVodByID godoc
-// @Summary Get vod by id
+// GetVodByUUID godoc
+// @Summary Get vod by uuid
 // @Tags Vods
-// @Accept json
 // @Produce json
 // @Success 200 {object} models.Vod
 // @Failure 404 {string} string
-// @Router /vods/{id} [get]
-// @Param id path string true "Unique Identifier"
-func GetVodById(c *fiber.Ctx) error {
-	var vods []models.Vod
+// @Router /vods/{uuid} [get]
+// @Param uuid path string true "Unique Identifier"
+func GetVodByUUID(c *fiber.Ctx) error {
+	var vod models.Vod
 	var v models.Vod
 
-	result := database.DB.Model((&vods)).Where("id = ?", c.Params("id")).Where("publish = ?", true).Limit(1).Find(&v)
+	database.DB.Model((&vod)).Where("uuid = ?", c.Params("uuid")).Where("publish = ?", true).Preload("Clips").First(&v)
 
-	if result.RowsAffected < 1 {
+	if v.UUID == "" {
 		return c.Status(http.StatusNotFound).JSON(fiber.Map{"message": "Vod not found"})
 	}
 
@@ -62,31 +62,20 @@ func GetVodById(c *fiber.Ctx) error {
 // @Param Body body object true "Vod dict"
 func CreateVod(c *fiber.Ctx) error {
 	var newVod models.Vod
-	var vods []models.Vod
-	var exists models.Vod
-
-	database.DB.Find(&vods)
+	var vod models.Vod
 
 	if err := c.BodyParser(&newVod); err != nil {
 		return c.Status(http.StatusBadRequest).JSON(fiber.Map{"message": err.Error()})
 	}
 
-	if result := database.DB.Model(&vods).Where("id = ?", newVod.ID).Find(&exists); result.RowsAffected > 0 {
-		return c.Status(http.StatusConflict).JSON(fiber.Map{"message": "Vod already exists. Use PATCH to modify existing vods."})
+	database.DB.Model(&vod).Find(&vod, "uuid = ?", newVod.UUID)
+	if vod.UUID != "" {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{"message": "Vod already exists. Use PATCH to modify existing vods."})
 	}
 
-	v := models.Vod{
-		ID:         newVod.ID,
-		Title:      newVod.Title,
-		Duration:   newVod.Duration,
-		Date:       newVod.Date,
-		Filename:   newVod.Filename,
-		Resolution: newVod.Resolution,
-		Fps:        newVod.Fps,
-		Size:       newVod.Size,
-		Publish:    newVod.Publish,
+	if err := database.DB.Model(&vod).Create(&newVod).Error; err != nil {
+		return c.Status(http.StatusBadRequest).JSON(fiber.Map{"message": err.Error()})
 	}
 
-	database.DB.Create(&v)
-	return c.Status(http.StatusCreated).JSON(fiber.Map{"message": fmt.Sprintf("%s created", newVod.ID)})
+	return c.Status(http.StatusCreated).JSON(fiber.Map{"message": fmt.Sprintf("%s created", newVod.UUID)})
 }
