# models/Game.go
@@ -1,7 +1,8 @@
 package models
 
 type Game struct {
-	ID     int    `gorm:"index:unique" json:"id" binding:"required"`
-	Name   string `json:"name" binding:"required"`
-	Boxart string `json:"box_art" binding:"required"`
+	UUID   int    `gorm:"primaryKey;not null" json:"uuid" binding:"required"`
+	Name   string `gorm:"not null" json:"name" binding:"required"`
+	Boxart string `gorm:"not null" json:"box_art" binding:"required"`
+	Clips  []Clip `gorm:"foreignKey:GameRefer" json:"clips"`
 }
